# note

./: .gitignore
agent_logs/: interaction_20260206_153448.jsonl  interaction_20260206_153448_complete.json  interaction_20260206_154454.jsonl  interaction_20260206_154454_complete.json  interaction_20260206_160427.jsonl  interaction_20260206_160427_complete.json
confluence-mcp/: .gitignore  README.md  pyproject.toml
confluence-mcp/src/confluence_mcp/: __init__.py  client.py  config.py  parser.py  server.py  tools.py
confluence-mcp/tests/: __init__.py
digimate/: .dockerignore  Dockerfile  README.md  pyproject.toml
digimate/docs/: build-guide.md  user-guide.md
digimate/src/digimate/: __init__.py  __main__.py
digimate/src/digimate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
digimate/src/digimate/cli/: main.py  runner.py
digimate/src/digimate/core/: agent.py  config.py  content.py  log.py  types.py
digimate/src/digimate/llm/: base.py  copilot.py  openai_compat.py
digimate/src/digimate/memory/: __init__.py  base.py  markdown.py  store.py  working.py
digimate/src/digimate/prompt/: system.py
digimate/src/digimate/session/: budget.py  compact.py  session.py
digimate/src/digimate/skills/: loader.py
digimate/src/digimate/tools/: base.py  file_ops.py  git_ops.py  mcp.py  sandbox.py  search_ops.py  terminal.py
digimate/src/digimate/workspace/: rules.py  scanner.py
digimate/tests/: conftest.py  test_config.py  test_content.py  test_log.py  test_memory.py  test_prompt.py  test_session.py  test_skills.py  test_store.py  test_tools.py  test_workspace.py
github-mcp/: .env.example  README.md  pyproject.toml
github-mcp/src/github_mcp/: __init__.py  client.py  config.py  server.py  tools.py
knowledge-base/: README.md  docker-compose.yml  notebook-tutorial.ipynb  requirements.txt
knowledge-base/config/: config.py
knowledge-base/src/notebook/: __main__.py  api.py  categories.py  embedder.py  models.py  parsers.py  settings.py  storage.py
knowledge-base/static/: index.html
linux-instruction/: dnf.md  du.md  find.md  git.md  grep.md  mssql-cli.md  vi.md
llm-service/: .env.example  .gitignore  DUAL_WORKER_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  THESIS_README.md  copilot_bridge.py  discover_copilot_models.js  extract_copilot_token.py  get_copilot_token.sh  llm-service-0320.md  mcp.json  probe_copilot_models.py  pyproject.toml
llm-service/.agent/context/: conversation_index.db
llm-service/.agent/memory/: MEMORY.md
llm-service/agent_logs/: interaction_20260125_234744.jsonl  interaction_20260125_234744_complete.json  interaction_20260207_095422.jsonl  interaction_20260207_095422_complete.json  interaction_20260319_234309.jsonl  interaction_20260319_234309_complete.json
llm-service/examples/: agent_conversation.json  agent_integration.py  conversation.py  dual_worker_demo.py  knowledge_base_agent.py  quick_dual_worker.py  simple_query.py  thesis_writer_demo.py
llm-service/scripts/: markdown_to_thesis.py  md2thesis.py
llm-service/src/llm_service/: __init__.py  auth.py  cli.py  client.py  config.py  simple_client.py
llm-service/src/llm_service/agent/: __init__.py  __main__.py  cli.py  copilot_client.py  core.py  logger.py  session.py  tools.py
llm-service/src/llm_service/agent/cli/: __init__.py  commands.py  main.py  parser.py  runner.py
llm-service/src/llm_service/agent/context/: __init__.py  conversation_index.py  topic_detector.py
llm-service/src/llm_service/agent/core/: __init__.py  agent.py  artifact_store.py  chat_planner.py  chunked_output_adapter.py  config.py  content_chunker.py  delegation.py  prompt.py  retrieval_reranker.py  roles.py
llm-service/src/llm_service/agent/mcp/: __init__.py  client.py
llm-service/src/llm_service/agent/memory/: __init__.py  base.py  claude_code.py  openclaw.py  vector_store.py
llm-service/src/llm_service/agent/session/: __init__.py  budget.py  session.py  state.py  types.py  working_memory.py
llm-service/src/llm_service/agent/skills/: __init__.py  constants.py  discovery.py  manager.py
llm-service/src/llm_service/agent/tools/: __init__.py  base.py  command_ops.py  document_ops.py  environment_ops.py  file_ops.py  mcp_ops.py  registry.py  sandbox_ops.py  search_ops.py  types.py  web_ops.py
llm-service/src/llm_service/dual_worker/: __init__.py  __main__.py  async_client.py  cli.py  config.py  debug_logger.py  judge.py  models.py  observability.py  orchestrator.py  planner.py  prompts.py  storage.py  worker.py
llm-service/src/llm_service/monitoring/: __init__.py  __main__.py  cli.py  config.py  models.py  notifier.py  orchestrator.py  sample-config.json  storage.py
llm-service/src/llm_service/thesis/: __init__.py  agent.py  citation_manager.py  docx_generator.py  models.py  paper_fetcher.py  prompts.py  test-thesis.py
llm-service/tests/: __init__.py  test_agent_delegation.py  test_budget.py  test_chunking_pipeline.py  test_config.py  test_graph.py  test_llm_native_orchestration.py  test_memory_budget.py  test_models.py  test_phase3_retrieval_reranking.py  test_phase4_side_lane.py  test_phase5_observability_stress.py  test_roles.py  test_session_compact.py  test_session_threads.py  test_task_continuation.py  test_topic_isolation.py  test_web_ops.py  test_working_memory.py
monitoring-mcp/: .env.example  .gitignore  README.md  pyproject.toml
monitoring-mcp/src/monitoring_mcp/: __init__.py  auth.py  config.py  models.py  server.py  tools.py
monitoring-mcp/src/monitoring_mcp/clients/: __init__.py  appdynamics.py  kafka.py  mongodb.py  splunk.py
prompt/: Schedule.md  assistant-agent.txt  harmonyos-ble-sdk.txt  monitor-platform.txt  prompt-finetune.txt  summarize-adapt.txt  tmp.sql  web_dialog_github.md
prompt/.agent/context/: conversation_index.db
prompt/.agent/memory/: MEMORY.md
prompt/.agent/memory/topics/: task-outcomes.md
prompt/agent_logs/: interaction_20260326_182713.jsonl  interaction_20260326_182713_complete.json
