[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monitoring-mcp"
version = "0.1.0"
description = "MCP server for infrastructure monitoring - Splunk, AppDynamics, Kafka, MongoDB"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["mcp", "monitoring", "splunk", "appdynamics", "kafka", "mongodb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiokafka>=0.10.0",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
monitoring-mcp = "monitoring_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/monitoring_mcp"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
